--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@benmerckx/deepmap",
+  "version": "0.0.0",
   "type": "module",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
